--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,7 +8,7 @@ nav:
         - 'Lições aprendidas': 'licoes-aprendidas.md'
     - Entregas:
         - 'Unidade 1': 'unidade1.md'
-    - Backlogs:
+    - Backlog:
         - 'Definições': 'dod-dor.md'
         - 'Requisitos': 'requisitosF-NF.md'
 
