--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,8 +6,7 @@ nav:
         - 'Visão geral do projeto': 'visao-geral-projeto.md'
         - 'Processo de desenvolvimento de software': 'processo-de-desenvolvimento-de-software.md'
         - 'Lições aprendidas': 'licoes-aprendidas.md'
-    - Interface:
-        - 'Interface do projeto': 'interface.md'
+    - Interface: 'interface.md'
     - Workflow: 'workflow.md'
     - Backlog:
         - 'Definições': 'dod-dor.md'
