--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,6 +13,7 @@ nav:
     - Sprints:
         - 'Sprint 1': 'sprint1.md'
         - 'Sprint 2': 'sprint2.md'
+        - 'Sprint 3': 'sprint3.md'
     - Arquitetura: 'arquitetura.md'
     - Interface: 'interface.md'
     - Workflow: 'workflow.md'  
