--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ nav:
         - 'Sprint 1': 'sprint1.md'
         - 'Sprint 2': 'sprint2.md'
         - 'Sprint 3': 'sprint3.md'
+        - 'Sprint 4': 'sprint4.md'
     - Arquitetura: 'arquitetura.md'
     - Interface: 'interface.md'
     - Workflow: 'workflow.md'  
