--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -21,12 +21,14 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '18.x'
+      
+      #não rodando pois o back e o front não estão integrados na main (ñ dá para achar o package json)
+     # - name: Install dependencies
+      #  run: cd ./backend && npm install 
 
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build project
-        run: npm run build --if-present
-
-      - name: Run tests
-        run: npm test
+     # - name: Build project
+      #  run: npm run build --if-present
+      
+    # Run teste error pois ainda não tem teste implementado 
+      #- name: Run tests
+      #  run: npm test
