--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -22,7 +22,7 @@ jobs:
       
       #não rodando pois o back e o front não estão integrados na main (ñ dá para achar o package json)
       - name: Install dependencies
-        run: npm install 
+        run: cd ./backend && npm install 
 
      # - name: Build project
       #  run: npm run build --if-present
