--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -21,8 +21,8 @@ jobs:
           node-version: '18.x'
       
       #não rodando pois o back e o front não estão integrados na main (ñ dá para achar o package json)
-      - name: Install dependencies
-        run: cd ./backend && npm install 
+      # - name: Install dependencies
+       # run: npm install 
 
      # - name: Build project
       #  run: npm run build --if-present
