--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -3,30 +3,25 @@ run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 
 on:
   push:
-    branches: ["*"]
+    branches:
+      - main
   pull_request:
-    branches: ["*"]
+    branches:
+      - main
 
 jobs:
   build:
-    runs-on: ubuntu-latest 
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: Set up Node.js 
-        uses: actions/setup-node@v3 
+        uses: actions/setup-node@v3
         with:
           node-version: '18.x'
-      
-      #não rodando pois o back e o front não estão integrados na main (ñ dá para achar o package json)
-      # - name: Install dependencies
-       # run: npm install 
 
-     # - name: Build project
-      #  run: npm run build --if-present
-      
-    # Run teste error pois ainda não tem teste implementado 
-      #- name: Run tests
-      #  run: npm test
+      - name: Install dependencies
+        run: cd ./frontend && npm install && npm run build
+
