--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,8 @@ nav:
         - 'Sprint 2': 'sprint2.md'
         - 'Sprint 3': 'sprint3.md'
         - 'Sprint 4': 'sprint4.md'
+        - 'Sprint 5': 'sprint5.md'
+        
     - Arquitetura: 'arquitetura.md'
     - Interface: 'interface.md'
     - Workflow: 'workflow.md'  
