--- a/backend/package.json
+++ b/backend/package.json
@@ -7,13 +7,13 @@
     "start": "node index",
     "dev": "nodemon index",
     "test": "node --experimental-modules node_modules/jest/bin/jest.js"
-    
   },
   "keywords": [],
   "author": "",
   "type": "module",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
