--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -25,3 +25,8 @@ jobs:
       - name: Install dependencies
         run: cd ./frontend && npm install && npm run build
 
+      - name: Install dependencies and run tests
+        working-directory: ./backend
+        run: |
+          npm install
+          npm test
