--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -23,14 +23,15 @@ jobs:
           node-version: '18.x'
 
       - name: Install dependencies
-        run: cd ./frontend && npm install && npm run build
+        run: cd ./backend && npm install && npm run build
 
       - name: Set up environment variables
         run: |
           echo "MONGODB_URI=${{ secrets.MONGODB_URI }}" >> $GITHUB_ENV
           echo "ADMIN_USERNAME=${{ secrets.ADMIN_USERNAME }}" >> $GITHUB_ENV
           echo "ADMIN_PASSWORD=${{ secrets.ADMIN_PASSWORD }}" >> $GITHUB_ENV
-          echo "SECRET_JWT=${{ secrets.SECRET_JWT }}" >> $GITHUB_ENV
+          echo "SECRET_JWT=176b58d9ce75355402b1e146cdbfa90f" >> $GITHUB_ENV  # Fornecer o valor diretamente
+
       - name: Install dependencies and run tests
         working-directory: ./backend
         run: |
