--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -22,18 +22,19 @@ jobs:
         with:
           node-version: '18.x'
 
-      - name: Install dependencies
-        run: cd ./backend && npm install && npm run build
-
       - name: Set up environment variables
         run: |
           echo "MONGODB_URI=${{ secrets.MONGODB_URI }}" >> $GITHUB_ENV
           echo "ADMIN_USERNAME=${{ secrets.ADMIN_USERNAME }}" >> $GITHUB_ENV
           echo "ADMIN_PASSWORD=${{ secrets.ADMIN_PASSWORD }}" >> $GITHUB_ENV
-          echo "SECRET_JWT=176b58d9ce75355402b1e146cdbfa90f" >> $GITHUB_ENV  # Fornecer o valor diretamente
+          echo "SECRET_JWT=${{ secrets.SECRET_JWT }}" >> $GITHUB_ENV
 
       - name: Install dependencies and run tests
         working-directory: ./backend
         run: |
-          npm install
+          cd ./frontend
+          npm ci --ignore-scripts
+          npm run build
+          cd ../backend
+          npm ci --ignore-scripts
           npm test
