--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,3 +1,4 @@
+
 name: Workflow GitHub Actions 
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 
@@ -22,21 +23,5 @@ jobs:
         with:
           node-version: '18.x'
 
-      - name: Set up environment variables
-        run: |
-          echo "MONGODB_URI=${{ secrets.MONGODB_URI }}" >> $GITHUB_ENV
-          echo "ADMIN_USERNAME=${{ secrets.ADMIN_USERNAME }}" >> $GITHUB_ENV
-          echo "ADMIN_PASSWORD=${{ secrets.ADMIN_PASSWORD }}" >> $GITHUB_ENV
-          echo "SECRET_JWT=${{ secrets.SECRET_JWT }}" >> $GITHUB_ENV
-
-      - name: Install dependencies and run tests
-        working-directory: ./backend
-        run: |
-          npm ci --ignore-scripts
-          npm test
-
-      - name: Build frontend
-        working-directory: ./frontend
-        run: |
-          npm ci --ignore-scripts
-          npm run build
+      - name: Install dependencies
+        run: cd ./frontend && npm install && npm run build
