--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -24,4 +24,9 @@ jobs:
           node-version: '18.x'
 
       - name: Install dependencies
-        run: cd ./frontend && npm install && npm run build
+        working-directory: ./backend
+        run: npm install
+
+      - name: Run tests
+        working-directory: ./backend
+        run: npm test
