--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -23,10 +23,15 @@ jobs:
         with:
           node-version: '18.x'
 
-      - name: Install dependencies
+      - name: Install backend dependencies
         working-directory: ./backend
-        run: npm install
+        run: |
+          rm -rf node_modules
+          npm install
 
-      - name: Run tests
+      - name: Install bcryptjs and run tests
         working-directory: ./backend
-        run: npm test
+        run: |
+          npm uninstall bcrypt
+          npm install bcryptjs
+          npm test
