--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,4 +1,3 @@
-
 name: Workflow GitHub Actions 
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 
@@ -25,10 +24,12 @@ jobs:
 
       - name: Install backend dependencies
         working-directory: ./backend
-        run: npm install
+        run: |
+          npm install
 
       - name: Install bcryptjs and run tests
         working-directory: ./backend
         run: |
+          npm uninstall bcrypt
           npm install bcryptjs
           npm test
