--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -21,13 +21,15 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '18.x'
-
+    
       - name: Install backend dependencies
         working-directory: ./backend
-        run: |
-          npm install
-          
-      - name: run tests
+        run: npm ci --ignore-scripts # Instalar dependências, ignorando os scripts de instalação
+
+      - name: Install bcryptjs and run tests
         working-directory: ./backend
         run: |
+          npm uninstall bcrypt # Remover bcrypt (caso tenha sido instalado antes)
+          npm install bcryptjs # Instalar bcryptjs para uso nos testes
           npm test
+
