--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,8 @@
     "@babel/preset-env": "^7.22.5",
     "@babel/register": "^7.22.5",
     "babel-jest": "^29.5.0",
-    "jest": "^29.5.0"
+    "jest": "^29.5.0",
+    "bcryptjs": "^2.4.3"
   },
   "jest": {
     "transform": {
@@ -34,3 +35,4 @@
     }
   }
 }
+
