--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,4 +1,4 @@
-name: Workflow GitHub Actions 
+name: Workflow GitHub Actions
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 
 on:
@@ -17,11 +17,17 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up Node.js 
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18.x'
+          node-version: '14' # Altere a versão do Node.js, se necessário
 
-      - name: Install dependencies
-        run: cd ./frontend && npm install && npm run build
+      - name: Install backend dependencies
+        working-directory: ./backend
+        run: |
+          npm install
 
+      - name: Run tests
+        working-directory: ./backend
+        run: |
+          npm test
