--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.0",
     "react-hook-form": "^7.44.3",
     "react-router-dom": "^6.11.2",
     "recharts": "^2.7.2",
