--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "@babel/preset-env": "^7.22.5",
     "@babel/register": "^7.22.5",
     "babel-jest": "^29.5.0",
+    "bcryptjs": "^2.4.3",
     "jest": "^29.5.0"
   },
   "jest": {
